@@ -1052,6 +1052,7 @@ void CGlobal::save_s$strings(void)
 		tablemap.num_chairs = 0;
 		tablemap.swagtextmethod = 0;
 		tablemap.potmethod = 0;
+		tablemap.activemethod = 0;
 		tablemap.sitename = "";
 		tablemap.network = "";
 		tablemap.chairconfig = "";
@@ -1068,6 +1069,9 @@ void CGlobal::save_s$strings(void)
 
 			if (tablemap.s$[i].name == "potmethod")
 				tablemap.potmethod = strtoul(tablemap.s$[i].text.GetString(), NULL, 10);
+
+			if (tablemap.s$[i].name == "activemethod")
+				tablemap.activemethod = strtoul(tablemap.s$[i].text.GetString(), NULL, 10);
 
 			if (tablemap.s$[i].name == "sitename")
 				tablemap.sitename = tablemap.s$[i].text;
