@@ -22,6 +22,7 @@ struct S_symbols
 	double allidelay;
 	double swagtextmethod;
 	double potmethod;
+	double activemethod;
 
 	//FORMULA FILE
 	double rake;
